# py-video-player

./: .gitignore  README.md  pp.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: __init__.py  test_advanced_features.py  test_video_player.py
