[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-video-player"
version = "0.0.1"
authors = [
    {name = "kevinzhao", email = "kevin.zhao.dev@gmail.com"},
]
description = "A lightweight command-line video player built with Python and OpenCV"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "opencv-python>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/kevinzhao-dev/py-video-player"
Repository = "https://github.com/kevinzhao-dev/py-video-player"
Issues = "https://github.com/kevinzhao-dev/py-video-player/issues"

[project.scripts]
pp = "pp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
